[package]
name = "superdev-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
solana-sdk = "2.0"
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"